--- a/metadata.yaml
+++ b/metadata.yaml
@@ -21,6 +21,8 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Pottery and Porcelain, from early times down to the Philadelphia exhibition
   of 1876
 url: http://www.gutenberg.org/ebooks/46779
